# pse-deep

./: .gitignore  README.md  data  main.py  pyproject.toml  scratch.py  test.ann
paper/: bibliography.bib  manuscript.tex
src/: data_loader.py  eval.py  experiments.py  models  models.py  news.py  processing.py  scratch.py  utils.py
src/news/: main.py  pyproject.toml
