[project]
name = "undergraduate-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.1.0",
    "annoy>=1.17.3",
    "cohere>=6.1.0",
    "datasets<4.0.0",
    "dotenv>=0.9.9",
    "huggingface-hub>=1.12.0",
    "joblib>=1.5.3",
    "numpy>=2.4.4",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "tokenizers>=0.22.2",
    "tqdm>=4.67.3",
    "transformers>=5.6.2",
]

[tool.uv]
managed = true
environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'", # Your Intel Mac
    "sys_platform == 'darwin' and platform_machine == 'arm64'",  # M1/M2/M3 Macs
    "sys_platform == 'linux' and platform_machine == 'x86_64'",   # Linux
    "sys_platform == 'win32' and platform_machine == 'AMD64'",   # Standard Windows (Intel/AMD)
]
