[project]
name = "undergraduate-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.1.0",
    "cohere>=6.1.0",
    "datasets<4.0.0",
    "dotenv>=0.9.9",
    "fast-langdetect>=1.0.0",
    "fasttext-wheel>=0.9.2",
    "huggingface-hub>=1.12.0",
    "joblib>=1.5.3",
    "langid>=1.1.6",
    "numpy>=2.4.4",
    "nvidia-nccl-cu12>=2.30.4",
    "openpyxl>=3.1.5",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "tokenizers>=0.22.2",
    "torch>=2.11",
    "tqdm>=4.67.3",
    "transformers>=5.6.2",
]

[tool.uv]
managed = true
