[project]
name = "undergraduate-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.1.0",
    "cohere>=6.1.0",
    "datasets<4.0.0",
    "dotenv>=0.9.9",
    "fast-langdetect>=1.0.0",
    "fasttext-wheel>=0.9.2",
    "huggingface-hub>=1.12.0",
    "joblib>=1.5.3",
    "langid>=1.1.6",
    "mrmr-selection>=0.2.8",
    "numpy==2.2.6",
    "nvidia-nccl-cu12>=2.30.4",
    "openpyxl>=3.1.5",
    "pandas-ta>=0.4.71b0",
    "perturbations-torch",
    "plotext>=5.3.2",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "ta>=0.11.0",
    "tokenizers>=0.22.2",
    "torch>=2.11",
    "tqdm>=4.67.3",
    "transformers>=5.6.2",
]

[tool.uv]
managed = true

[tool.uv.sources]
perturbations-torch = { git = "https://github.com/nlml/perturbations-torch.git" }
